--- a/Web/landing_page.html
+++ b/Web/landing_page.html
@@ -12,22 +12,27 @@
         <nav>
             <a href="#" class="header__logo"> <h2>SEMPITERNAL</h2> </a>
             <div class="header__nav__deslogado">
-                <ul class="navbar__items ranking__banda">
-                    <li><a href="#">Ranking</a></li>
-                    <li><a href="#">Bandas</a></li>
-                </ul>
-                <ul class="navbar__items login__cadastro">
-                    <li>
-                        <a href="#">LOGIN</a>
-                    </li>
-                    <li class="btn btn-primary">
-                        <a href="#"><h3>CADASTRE-SE</h3></a>
-                    </li>
-                </ul>
+                <div class="ranking__banda">
+                    <ul class="navbar__items">
+                        <li><a href="#">Ranking</a></li>
+                        <li><a href="#">Bandas</a></li>
+                    </ul>
+                </div>
+                <div class="login__cadastro">
+                    <ul class="navbar__items">
+                        <li>
+                            <a href="#">LOGIN</a>
+                        </li>
+                        <li class="btn btn-primary">
+                            <a href="#"><h3>CADASTRE-SE</h3></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
     
+    
     <main>
-</body>
-</html>
+    </body>
+    </html>
