HTML e CSS de Landing Page, Cadastro e Login concluídos

--- a/Web/landing_page.html
+++ b/Web/landing_page.html
@@ -229,10 +229,10 @@
                         display: true,
                         position: "bottom",
                         labels: {
-                            color: "#EEE", // Cor do texto da legenda
-                            padding: 15, // Diminuído de 20 para 15
+                            color: "#EEE",
+                            padding: 15,
                             font: {
-                                size: 16, // Diminuído de 13 para 12
+                                size: 16,
                             },
                         },
                     },
