Integração do cadastro do usuário iniciada.

--- a/Web/public/landing_page.html
+++ b/Web/public/landing_page.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="public/css/style.css" />
-    <link rel="stylesheet" href="public/css/landing_page.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/landing_page.css" />
     <title>SEMPITERNAL</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
 </head>
@@ -21,7 +21,7 @@
                 <div class="login__cadastro">
                     <ul class="navbar__items">
                         <li>
-                            <a href="login.html">LOGIN</a>
+                            <a href="login copy.html">LOGIN</a>
                         </li>
                         <li>
                             <a href="register.html"><span class="botao">CADASTRE-SE</span></a>
@@ -42,7 +42,7 @@
                         de autoconhecimento.
                     </p>
                 </div>
-                <a href="" class="botao__cta"><span class="botao">FAÇA PARTE</span></a>
+                <a href="register.html" class="botao__cta"><span class="botao">FAÇA PARTE</span></a>
             </div>
         </section>
         <section class="expresse">
@@ -50,7 +50,7 @@
             <div class="expresse__container">
                 <div class="funcionalidade__container">
                     <div class="funcionalidade__content vote__borda">
-                        <img src="public/assets/icons/Vote.png" />
+                        <img src="assets/icons/Vote.png" />
                         <div class="titulo__texto">
                             <h3>AVALIE</h3>
                             <p>
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="funcionalidade__content favorite__borda">
-                        <img src="public/assets/icons/FilledStar.png" />
+                        <img src="assets/icons/FilledStar.png" />
                         <div class="titulo__texto">
                             <h3>FAVORITE</h3>
                             <p>
@@ -123,11 +123,11 @@
                 <h2 class="footer__logo">SEMPITERNAL</h2>
                 <div class="footer__social">
                     <a href="https://www.linkedin.com/in/strilicherk/" class="social__link">
-                        <img src="public/assets/icons/LinkedIn.png" alt="LinkedIn"> 
+                        <img src="assets/icons/LinkedIn.png" alt="LinkedIn"> 
                         <span>LinkedIn</span>
                     </a>
                     <a href="https://github.com/Strilicherk" class="social__link">
-                        <img src="public/assets/icons/GitHub.png" alt="GitHub"> 
+                        <img src="assets/icons/GitHub.png" alt="GitHub"> 
                         <span>GitHub</span>
                     </a>
                 </div>
@@ -156,18 +156,18 @@
             var elementosImg = "";
             
             var bandasLogos = [
-            { src: "public/assets/images/LimpBizkit.png", alt: "Logo da banda Limp Bizkit" },
-            { src: "public/assets/images/PapaRoach.png", alt: "Logo da banda Papa Roach" },
-            { src: "public/assets/images/Korn.png", alt: "Logo da banda Korn" },
-            { src: "public/assets/images/LinkinPark.png", alt: "Logo da banda Linkin Park" },
-            { src: "public/assets/images/Deftones.png", alt: "Logo da banda Deftones com o pônei do álbum White Pony" },
-            { src: "public/assets/images/Soad.png", alt: "Logo da banda System of a Down" },
-            { src: "public/assets/images/Slipknot.png", alt: "Logo da banda Slipknot" },
-            { src: "public/assets/images/BMTH.png", alt: "Capa do álbum Sempiternal da banda Bring Me The Horizon" },
-            { src: "public/assets/images/Motionless.png", alt: "Logo da banda Motionless in White " },
-            { src: "public/assets/images/A7X.png", alt: "Logo da banda Avenged Sevenfold" },
-            { src: "public/assets/images/PierceTheVeil.png", alt: "Logo da banda Pierce The Veil" },
-            { src: "public/assets/images/MCR.png", alt: "Logo da banda My Chemical Romance" }
+            { src: "assets/images/LimpBizkit.png", alt: "Logo da banda Limp Bizkit" },
+            { src: "assets/images/PapaRoach.png", alt: "Logo da banda Papa Roach" },
+            { src: "assets/images/Korn.png", alt: "Logo da banda Korn" },
+            { src: "assets/images/LinkinPark.png", alt: "Logo da banda Linkin Park" },
+            { src: "assets/images/Deftones.png", alt: "Logo da banda Deftones com o pônei do álbum White Pony" },
+            { src: "assets/images/Soad.png", alt: "Logo da banda System of a Down" },
+            { src: "assets/images/Slipknot.png", alt: "Logo da banda Slipknot" },
+            { src: "assets/images/BMTH.png", alt: "Capa do álbum Sempiternal da banda Bring Me The Horizon" },
+            { src: "assets/images/Motionless.png", alt: "Logo da banda Motionless in White " },
+            { src: "assets/images/A7X.png", alt: "Logo da banda Avenged Sevenfold" },
+            { src: "assets/images/PierceTheVeil.png", alt: "Logo da banda Pierce The Veil" },
+            { src: "assets/images/MCR.png", alt: "Logo da banda My Chemical Romance" }
             ];
             
             for (var i = 0; i < bandasLogos.length; i++) {
