--- a/Web/public/login copy.html
+++ b/Web/public/login copy.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="public/css/style.css">
-    <link rel="stylesheet" href="public/css/register_login.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/register_login.css">
     <title>Sempiternal - Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,7 +32,6 @@
     </header>
 
     <main>
-        <h1 class="auth__title">SEMPITERNAL</h1>
         <div class="auth__card">
             <div class="auth__tabs">
                 <a href="register.html" class="tab__link">CADASTRO</a>
