--- a/Web/public/index.html
+++ b/Web/public/index.html
@@ -21,7 +21,7 @@
                 <div class="login__cadastro">
                     <ul class="navbar__items">
                         <li>
-                            <a href="login copy.html">LOGIN</a>
+                            <a href="login.html">LOGIN</a>
                         </li>
                         <li>
                             <a href="register.html"><span class="botao">CADASTRE-SE</span></a>
