Pequenas mudanças em css globais, criação do HTML e CSS da tela de navegação, integração da navegação com a API.

--- a/Web/public/index.html
+++ b/Web/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="landing_page.html" class="header__logo"> <h2>SEMPITERNAL</h2> </a>
+            <a href="index.html" class="header__logo"> <h2>SEMPITERNAL</h2> </a>
             <div class="header__nav__deslogado">
                 <div class="ranking__banda">
                     <ul class="navbar__items">
@@ -120,7 +120,7 @@
     <footer>
         <div class="footer__container">
             <div class=" footer__identidade">
-                <h2 class="footer__logo">SEMPITERNAL</h2>
+                <a href="index.html"> <h2 class="footer__logo">SEMPITERNAL</h2> </a>
                 <div class="footer__social">
                     <a href="https://www.linkedin.com/in/strilicherk/" class="social__link">
                         <img src="assets/icons/LinkedIn.png" alt="LinkedIn"> 
