--- a/Web/public/login.html
+++ b/Web/public/login.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="landing_page.html" class="header__logo"> <h2>SEMPITERNAL</h2> </a>
+            <a href="index.html" class="header__logo"> <h2>SEMPITERNAL</h2> </a>
             <div class="header__nav__deslogado">
                 <div class="ranking__banda">
                     <ul class="navbar__items">
