Header do usuário logado criado.

--- a/Web/public/band.html
+++ b/Web/public/band.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/landing_page.css"/>
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html" class="header__logo"> <h2>SEMPITERNAL</h2> </a>
+            <ul class="header__nav logado">
+                <li><a href="index.html" class="navbar__items__options">Home</a></li>
+                <li><a href="navigation.html" class="navbar__items__options">Bandas</a></li>
+                <li><a href="profile.html" class="navbar__items__options">Perfil</a></li>
+                <li> <button onclick="Logout()">Sair</button> </li>
+            </ul>
+        </nav>
+    </header>
+    
+    
     <script>
         // Listando empresas cadastradas 
         function listar() {
