--- a/Web/public/index.html
+++ b/Web/public/index.html
@@ -12,19 +12,19 @@
     <header>
         <nav>
             <a href="index.html" class="header__logo"> <h2>SEMPITERNAL</h2> </a>
-            <div class="header__nav__deslogado">
+            <div class="header__nav">
                 <div class="ranking__banda">
                     <ul class="navbar__items">
-                        <li><a href="navigation.html">Bandas</a></li>
+                        <li><a href="navigation.html" class="navbar__items__options">Bandas</a></li>
                     </ul>
                 </div>
                 <div class="login__cadastro">
                     <ul class="navbar__items">
                         <li>
-                            <a href="login.html">LOGIN</a>
+                            <a href="login.html" class="navbar__items__options">LOGIN</a>
                         </li>
                         <li>
-                            <a href="register.html"><span class="botao">CADASTRE-SE</span></a>
+                            <a href="register.html" class="navbar__items__options"><span class="botao">CADASTRE-SE</span></a>
                         </li>
                     </ul>
                 </div>
