Tela de navegação finalizada, funcionalidade de filtro adaptada para case sensitive, redirecionamento passando id da banda como parametro na url concluído.

--- a/Web/public/banda.html
+++ b/Web/public/banda.html
@@ -31,13 +31,8 @@
                 method: "GET",
             })
             .then(function (resposta) {
-                resposta.json().then((empresas) => {
-                    empresas.forEach((empresa) => {
-                        listaEmpresasCadastradas.push(empresa);
-                        
-                        console.log("listaEmpresasCadastradas")
-                        console.log(listaEmpresasCadastradas[0].codigo_ativacao)
-                    });
+                resposta.json().then((bandInfo) => {
+                    console.log(bandInfo)
                 });
             })
             .catch(function (resposta) {
