--- a/Web/public/login.html
+++ b/Web/public/login.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/register_login.css">
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/cadastro_login.css">
     <script src="./js/sessao.js"></script>
     <title>Sempiternal - Login</title>
 </head>
@@ -14,7 +14,7 @@
             <div class="header__nav">
                 <div class="ranking__banda">
                     <ul class="navbar__items">
-                        <li><a href="navigation.html" class="navbar__items__options">Bandas</a></li>
+                        <li><a href="navegacao.html" class="navbar__items__options">Bandas</a></li>
                     </ul>
                 </div>
                 <div class="login__cadastro">
@@ -23,7 +23,7 @@
                             <a href="login.html" class="navbar__items__options">LOGIN</a>
                         </li>
                         <li>
-                            <a href="register.html" class="navbar__items__options"><span class="botao">CADASTRE-SE</span></a>
+                            <a href="cadastro.html" class="navbar__items__options"><span class="botao">CADASTRE-SE</span></a>
                         </li>
                     </ul>
                 </div>
@@ -35,7 +35,7 @@
         <div id="modal__card" class="modal__error"></div>
         <div class="auth__card">
             <div class="auth__tabs">
-                <a href="register.html" class="tab__link">CADASTRO</a>
+                <a href="cadastro.html" class="tab__link">CADASTRO</a>
                 <a href="login.html" class="tab__link tab__active">LOGIN</a>
             </div>
             
