--- a/Web/public/home.html
+++ b/Web/public/home.html
@@ -31,7 +31,7 @@
         
         <section class="dashboard__section">
             <div class="section__header">
-                <h2 class="section__title">RANKING DE SENTIMENTOS</h2>
+                <h2 class="section__title">RADAR DE SENTIMENTOS</h2>
                 <p>Os sentimentos mais presentes na comunidade, com base nas curtidas.</p>
             </div>
             <div class="chart__container medium__chart">
